# movetk-app-template

./: CMakeLists.txt  README.md  ci.sh  geolife.py
.github/workflows/: build-macos.yml  build-ubuntu.yml
cmake/: Findmovetk.cmake  tools.cmake
src/: CMakeLists.txt  process_trajectories.cpp
